# Math

./: CMakeLists.txt  mathematics.h  readme.txt
Geometry/: aabb.h  plane.h  sphere.h
Intersections/: intersections.h
Math/: Mathematics.pro  Mathematics.pro.user.84a61de
Math/Geometry/: aabb.cpp  plane.cpp
Math/Intersections/: intersections.cpp
Math/Matrix/: matrix3x3.cpp
Math/Vector/: vector4.cpp
Matrix/: matrix3x3.cpp  matrix3x3.h  matrix4x4.cpp  matrix4x4.h
Vector/: vector3.cpp  vector3.h  vector4.cpp  vector4.h
build-Mathematics-Desktop_Qt_5_3_0_MinGW_32bit-Release/: Makefile  Makefile.Debug  Makefile.Release
include/Geometry/: sphere.cpp
include/Matrix/: matrix3x3.cpp  matrix3x3.h  matrix4x4.h
include/Vector/: vector3.cpp  vector3.h
src/: mathematics.h
src/Geometry/: aabb.cpp  plane.cpp  sphere.cpp
src/Helper/: helper.cpp
src/Intersections/: intersections.cpp
src/Matrix/: matrix3x3.cpp  matrix4x4.cpp
src/Vector/: vector3.cpp  vector4.cpp
